# PurrfectCodeForked

./: .dockerignore  .env.example  .gitignore  .nltk_packages  Dockerfile  Procfile  README.md  analysis.py  database.py  fly.toml  heroku.yml  main.py  post_comparison.py  pyproject.toml  reddit.py  requirements.txt  scheduled_jobs.py  tasks.py
prisma/: schema.prisma
prisma/migrations/20230316063316_created_post_and_post_comparison_models/: migration.sql
reddit_bot/bot/: reddit_client.py
src/: analysis.py  bot.py  db.py  df_format.ipynb  main.py  reddit_types.py  services.py
