[tool.poetry]
name = "buddyfinder"
version = "0.1.0"
description = ""
authors = ["Gal Zafar <theycallmefachfach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
supabase = "^0.7.1"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"
praw = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
